@@ -5,6 +5,7 @@
 16-May-2002
 ~~~~~~~~~~~
 Pinboard background colour option works again.
+Bugfix: Typing too fast into the minibuffer could miss characters.
 
 15-May-2002
 ~~~~~~~~~~~
